# ASCII-PR-PRO

./: .gitignore  ASCII Character.drfx  ASCII_PRO_v1.0.jsx  ASCII_PR_PRO_COMPLETION_PLAN.md  CHANGELOG.md  CMakeLists.txt  README.md  ascii_setup.jsx
.github/workflows/: core-tests.yml
ascii-character-ae/: LICENSE.md
ascii-character-ae/assets/presets/: starter-presets.json
ascii-character-ae/docs/: architecture.md  build-instructions.md  commercialization.md  drfx-analysis.md  final-report.md  installation.md  test-plan.md  user-guide.md
ascii-character-ae/packaging/: package-windows.ps1
ascii-character-ae/src/plugin/: ASCIICharacter.cpp  ASCIICharacter.h  CharacterSets.h  ColorPalettes.cpp  ColorPalettes.h  Parameters.cpp  RenderEngine.cpp  Utilities.h
ascii-character-ae/tests/: render_engine_smoke.cpp
assets/fonts/: README.md
assets/glyphs/: ascii_atlas_generated.h
assets/presets/: presets_guide.md
chat gpt version/: ASCII_Art_Effect_Generator.jsx  ASCII_LITE.jsx  ASCII_PRO_Effect.jsx  ASCII_WORKING.jsx  INSTALLATION.md  LAUNCH_CHECKLIST.md  LICENSE.txt  MARKETING_GUIDE.md  README.md  USER_GUIDE.md
cmake/: ConfigurePiPL.cmake  FindAfterEffectsSDK.cmake
docs/: build-instructions.md  feature-parity.md
legacy/: ASCII_PRO_v1.0.jsx  ascii-toolkit-original.jsx  ascii_expression.js  ascii_setup.jsx
panel/: ASCII PRO.jsx  README.md
plugin/include/: ASCIICharacter.h  GlyphAtlas.h  GridLayout.h  Parameters.h  PixelAdapter.h  RenderEngine.h  RenderTypes.h  Utilities.h
plugin/resources/: ASCIICharacter.rc  ASCIICharacterPiPL.r  resource.h
plugin/src/: ASCIICharacter.cpp  CharacterSets.cpp  GlyphAtlas.cpp  GridLayout.cpp  PixelAdapter.cpp  RenderEngine.cpp  Utilities.cpp
tests/unit/: test_color_controls.cpp  test_grid_layout.cpp  test_performance.cpp  test_pixel_adapter.cpp
tools/: configure-windows.ps1  generate_glyph_atlas.py  install-local.ps1  package-release.ps1
tools/panel/: index.html
